; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_devs.c_devfs_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_devs.c_devfs_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.cdev_priv = type { i32, i32 }

@devmtx = common dso_local global i32 0, align 4
@MA_OWNED = common dso_local global i32 0, align 4
@CDP_ACTIVE = common dso_local global i32 0, align 4
@devfs_inos = common dso_local global i32 0, align 4
@cdevp_list = common dso_local global i32 0, align 4
@cdp_list = common dso_local global i32 0, align 4
@devfs_generation = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @devfs_create(%struct.cdev* %0) #0 {
  %2 = alloca %struct.cdev*, align 8
  %3 = alloca %struct.cdev_priv*, align 8
  store %struct.cdev* %0, %struct.cdev** %2, align 8
  %4 = load i32, i32* @MA_OWNED, align 4
  %5 = call i32 @mtx_assert(i32* @devmtx, i32 %4)
  %6 = load %struct.cdev*, %struct.cdev** %2, align 8
  %7 = call %struct.cdev_priv* @cdev2priv(%struct.cdev* %6)
  store %struct.cdev_priv* %7, %struct.cdev_priv** %3, align 8
  %8 = load i32, i32* @CDP_ACTIVE, align 4
  %9 = load %struct.cdev_priv*, %struct.cdev_priv** %3, align 8
  %10 = getelementptr inbounds %struct.cdev_priv, %struct.cdev_priv* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* @devfs_inos, align 4
  %14 = call i32 @alloc_unrl(i32 %13)
  %15 = load %struct.cdev_priv*, %struct.cdev_priv** %3, align 8
  %16 = getelementptr inbounds %struct.cdev_priv, %struct.cdev_priv* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.cdev*, %struct.cdev** %2, align 8
  %18 = call i32 @dev_refl(%struct.cdev* %17)
  %19 = load %struct.cdev_priv*, %struct.cdev_priv** %3, align 8
  %20 = load i32, i32* @cdp_list, align 4
  %21 = call i32 @TAILQ_INSERT_TAIL(i32* @cdevp_list, %struct.cdev_priv* %19, i32 %20)
  %22 = load i32, i32* @devfs_generation, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @devfs_generation, align 4
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local %struct.cdev_priv* @cdev2priv(%struct.cdev*) #1

declare dso_local i32 @alloc_unrl(i32) #1

declare dso_local i32 @dev_refl(%struct.cdev*) #1

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.cdev_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
